# wxTemplate

./: CMakeLists.txt  de.mo  de.po  definitions.h  gettext.sh  iconpool.h  main.cpp  snippets.h  wxTemplate.pot
